--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 .App {
   text-align: center;
+  display: inline-block;
 }
 .Header {
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
+  margin-left: 40px;
 }
 /* write your parent styles in here for your App.js */
